<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="#6BDBEDF4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="@color/base" />

            <TextView
                android:id="@+id/id_course_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewStyleInList"
                android:textStyle="bold"
                tools:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="4dp"
                android:src="@drawable/ic_name_course" />

            <TextView
                android:id="@+id/name_course_item"
                style="@style/TextViewStyleInList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="Android " />

        </LinearLayout>


            <TextView
                android:id="@+id/description_course"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                tools:text="Course content
                Java
                AndroidKotlin
                Graduation project" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_start_courses"
                android:textColor="@color/base"
                android:drawableStart="@drawable/ic_courses_start" />

            <TextView
                android:id="@+id/date_course_start"
                style="@style/TextViewStyleInList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                tools:text="15,5454564 - 16,97542154" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_end_courses"
                android:textColor="@color/base"
                android:drawableStart="@drawable/ic_courses_end" />

            <TextView
                android:id="@+id/date_course_end"
                style="@style/TextViewStyleInList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                tools:text="15,5454564 - 16,97542154" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>